--- a/social-media/index.html
+++ b/social-media/index.html
@@ -4,7 +4,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./public/logo6.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Social Media</title>
   </head>
